--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "react": "18.1.0",
     "react-native": "0.70.6",
     "react-native-gesture-handler": "^2.8.0",
+    "react-native-qrcode-svg": "^6.1.2",
+    "react-native-svg": "^13.6.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-navigation": "^4.4.4",
     "reactotron-react-native": "^5.0.3",
     "styled-components": "^5.3.6"
